# hibou_label_core

./: Cargo.toml  README.md
src/: interfaces.rs  lib.rs
src/commons/: hibou_color_palette.rs  mod.rs  util.rs
src/core/: general_context.rs  mod.rs
src/core/semantics/: execute.rs  frontier.rs  mod.rs  position.rs  trace_action.rs
src/core/syntax/: action.rs  interaction.rs  mod.rs
src/core/syntax/lang_traits/: mod.rs
src/inclusion_checker/: check_inclusion.rs  mod.rs
src/inclusion_checker/loggers/glog/: all_the_rest_drawer.rs  legend_writer.rs  mod.rs  node_drawer.rs
src/inclusion_checker/process/: conf.rs  context.rs  filter.rs  filtration.rs  handler.rs  mod.rs  node.rs  priorities.rs  state.rs  step.rs
src/rewriting/: canonize.rs  draw_as_term.rs  lang.rs  lang_ord.rs  metrics.rs  mod.rs
src/rewriting/conversion/: from_rewritable_term.rs  mod.rs  to_rewritable_term.rs
src/rewriting/loggers/: mod.rs
src/rewriting/loggers/glog/: all_the_rest_drawer.rs  legend_writer.rs  mod.rs  node_drawer.rs  node_drawer_as_seqdiag.rs  (+1 more)
src/rewriting/rules/: high_level_hibou_rewrite_rules.rs  mod.rs
src/seqdiag_lib_interface/: internal_representation.rs  io.rs  mod.rs
src/seqdiag_lib_interface/conversion/: lang_to_repr.rs  mod.rs  repr_to_lang.rs
src/seqdiag_lib_interface/from_text/: context_aware_parser.rs  mod.rs
src/seqdiag_lib_interface/to_image/: drawing_context.rs  mod.rs
src/seqdiag_lib_interface/to_text/: context_aware_printer.rs  mod.rs
src/tests/: canonize.rs  mod.rs
src/tests/canonize/: mod.rs  test1.rs  test_factorize.rs  util.rs
(+31 files in other folders)
