[package]
name = "hibou_label_core"
version = "0.9.0"
authors = ["Erwan Mahe"]
edition = "2021"

license = "Apache-2.0"
description = "Holistic Interaction Behavioral Oracle Utility - hibou provides utilities for the analysis of traces and multi-traces of interaction models"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit                        = "1.0.2"       # for !hashset macro etc

image                         = "0.25.0"      # for rendering interactions
imageproc                     = "0.25.0"      # ...
image_colored_text            = "0.1.3"       # for drawing colored text
ab_glyph                      = "0.2.23"       # for fonts and scale for text in images


nom                           = "7.1.3"

graphviz_dot_builder          = "0.1.5"        # for generating dot files to be used with graphviz
graph_process_manager_core    = "0.2.1"      #
graph_process_manager_loggers = "0.2.3"      #
autour_core                   = "0.1.12"
common_sequence_diagram_io    = { version = "0.1.7", features=["from_text", "to_text", "to_image"]}
simple_term_rewriter          = "0.2.6"


